--- a/THANKU/registration.html
+++ b/THANKU/registration.html
@@ -90,7 +90,9 @@
                 </script>
             
  <div class="g-recaptcha" data-sitekey="your_site_key"></div>
- <button type="submit" class="btn">Register</button>
+ <div class="form-group">
+    <button type="submit">Register</button>
+  </div>
             </form>
         </div>
     </div>
