--- a/THANKU/votingpage.html
+++ b/THANKU/votingpage.html
@@ -47,15 +47,15 @@
 	<form action="submit_vote.php" method="post">
 		<label for="candidate1">
 			<input type="radio" name="candidate" id="candidate1" value="1">
-			Candidate 1
+			SHIJU T
 		</label>
 		<label for="candidate2">
 			<input type="radio" name="candidate" id="candidate2" value="2">
-			Candidate 2
+			NIKHIL
 		</label>
 		<label for="candidate3">
 			<input type="radio" name="candidate" id="candidate3" value="3">
-			Candidate 3
+			SHIJU P
 		</label>
 		<input type="submit" value="Submit Vote">
 	</form>
