--- a/THANKU/login.html
+++ b/THANKU/login.html
@@ -70,13 +70,10 @@
       <div class="form-group">
         <button type="submit">Login</button>
       </div>
+      <p>don't have an account <a href="registration.html" style="text-align: center;"> register here </a></p>
     </form>
   </div>
-</body>
-</html>
-
-                     <p>don't have an account<a href="C:\Users\ACERPC-14\THANKU\registration.html" class="register-link">Register</a></p>
-        </div>
-    </div>
+  </div>
+  </div>
 </body>
 </html>
