--- a/THANKU/registration.html
+++ b/THANKU/registration.html
@@ -2,7 +2,25 @@
 <html>
 <head>
     <title>Register</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        #captcha {
+            font-family: Arial, sans-serif;
+            font-size: 20px;
+            padding: 10px;
+            background-color: #f2f2f2;
+            border: 1px solid #ccc;
+            display: inline-block;
+        }
+         #refresh {
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            padding: 5px 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -32,7 +50,7 @@
                 <label for="department">Department:</label>
                 <select id="department" name="department">
                     <option value="BCA">BCA</option>
-                    <option value=BBA">BBA</option>
+                    <option value="BBA">BBA</option>
                     <option value="CS">CS</option>
                     <option value="BA ">BA</option>
                 </select><br>
@@ -45,26 +63,6 @@
 
                 <label for="dob">Date of Birth:</label>
                 <input type="date" id="dob" name="dob"><br>
-
-                <style>
-                    #captcha {
-                        font-family: Arial, sans-serif;
-                        font-size: 20px;
-                        padding: 10px;
-                        background-color: #f2f2f2;
-                        border: 1px solid #ccc;
-                        display: inline-block;
-                    }
-                    #refresh {
-                        font-family: Arial, sans-serif;
-                        font-size: 16px;
-                        padding: 5px 10px;
-                        background-color: #4CAF50;
-                        color: white;
-                        border: none;
-                        cursor: pointer;
-                    }
-                </style>
                 <script>
                     function generateCaptcha() {
                         var captcha = "";
